--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
